# scprocess

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  lsf.yaml  mkdocs.yml  mkdocs_reqs.txt  newproj  plotKnee  plotknee  pyproject.toml  ruff.toml  rules.smk  scprocess  scprocess.sh  scprocess_func.py  scprocess_utils.py  scsetup  scsetup.sh  setup_rules.smk  setup_rules_test.smk  setup_utils.py  workflow_std.smk
configs/: config-setup-template.yaml  config-setup-test.yaml  config-template.yaml
docs/: index.md  introduction.md  reference.md  running.md  setup.md  shpc.md  troubleshooting.md  tutorial.md  usage.md
envs/: alevin_fry.linux-64.pin.txt  alevin_fry.yaml  alevin_fry.yml  ambientr.yaml  celltypist.linux-64.pin.txt  celltypist.yaml  chem_detection.yaml  hvgs.linux-64.pin.txt  hvgs.yaml  integration.linux-64.pin.txt  integration.post-deploy.sh  integration.yaml  py_env.linux-64.pin.txt  py_env.yaml  py_env.yml  rlibs.linux-64.pin.txt  rlibs.yaml  rlibs.yml  scprocess_base.yaml  scprocess_local.yaml  scprocess_lsf.yaml  scprocess_slurm.yaml  scprocess_slurm.yml  shiny.yaml  xgboost_r.yaml
proj_template/: _site.yml  custom.css
resources/: resources_lm_params_2025-11-20.csv  resources_lm_params_2025-11-27.csv  valid_palettes.json
rules/: alevin_fry.smk  ambient.smk  cellbender.smk  doublet_id.smk  flex.smk  hto.smk  hvgs.smk  integration.smk  join.smk  label_and_subset.smk  label_celltypes.smk  make_hto_sce.smk  make_sce.smk  mapping.smk  marker_genes.smk  metacells.smk  pb_empties.smk  qc.smk  render_htmls.smk  scprocess.smk  setup.smk  setup_rules.smk  (+2 more)
(+149 files in other folders)
